Fix video clipping
Thanks CT

--- a/style.css
+++ b/style.css
@@ -271,10 +271,11 @@ section:target iframe {
 a[href*="//"]:after { 
   font-weight: 300;
   font-size: .85em;
-  content: " [\2197]"; /* top right arrow: ↗ */
+  content: "[\2197]"; /* top right arrow: ↗ */
   color: var(--color_text);
   opacity: 0.7;
   letter-spacing: -0.15em; /*make it tighter*/
+  font-family: var(--font_mono);
 }
 
 a[href*="//"]:hover:after {
